# dict-rs

./: Cargo.toml  README.md
src/: lib.rs  record.rs  traits.rs  utils.rs
tests/: main.rs
